# UA-Email-Client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: check-required-files.yml
