[tool.poetry]
name = "ua-email-client"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.29.1"
jinja2 = "^3.1.2"
datetime = "^5.3"
nose = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
